[gd_scene load_steps=4 format=2]

[ext_resource path="res://Slot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Command.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="Commands" type="Node2D" parent="."]

[node name="Command_Key_A" parent="Commands" instance=ExtResource( 2 )]

[node name="Command_Key_W" parent="Commands" instance=ExtResource( 2 )]
command_code = "KEY_W"

[node name="Command_Key_S" parent="Commands" instance=ExtResource( 2 )]
command_code = "KEY_S"

[node name="Command_Key_D" parent="Commands" instance=ExtResource( 2 )]
command_code = "KEY_D"

[node name="Slots" type="Node2D" parent="."]

[node name="LeftSlot" parent="Slots" instance=ExtResource( 1 )]

[node name="RightSlot" parent="Slots" instance=ExtResource( 1 )]
action = "RIGHT"

[node name="UpSlot" parent="Slots" instance=ExtResource( 1 )]
action = "UP"

[node name="DownSlot" parent="Slots" instance=ExtResource( 1 )]
action = "DOWN"
